Updated documentation screenshots to correspond with the current trunk view. The next public updating of the documentation is only likely to be with the next release of Habari which will come from trunk as it currently stands.  Also made the images into links so people can view the larger versions of the images.  Fixes habari/habari#196 from a Habari src perspective.  The wiki needs updating with these images too.

--- a/manual/administration.html
+++ b/manual/administration.html
@@ -16,8 +16,7 @@ href='index.xml'/>
 	<a href="installation.html" title="Installation">Installation</a>
 	<a href="upgrading.html" title="Upgrading">Upgrading</a>
 	<a href="using.html" title="Using Habari">Using Habari</a>
-	<a href="developer.html" title="Developer Introduction">Developer
-Introduction</a>
+	<a href="developer.html" title="Developer Introduction">Developer Introduction</a>
 </div>
 
 <div id="wrapper">
@@ -32,8 +31,7 @@ Introduction</a>
 <p>The Dashboard is the first page you see after you log in to Habari's administrative interface. The dashboard can be reached from any page of Habari's administrative interface by choosing <b>Dashboard</b> from the main menu, or by typing <b>Q</b> followed by <b>D</b>.
 </p>
 
-<div class="image"><img alt="Dashboard admin page with default modules" src="dashboard_with_modules.jpg"
-width="300" height="251" class="thumbimage" />
+<div class="image"><a href="dashboard_with_modules.jpg"><img alt="Dashboard admin page with default modules" src="dashboard_with_modules.jpg" width="300" height="251" class="thumbimage" /></a>
 <div class="caption">Dashboard admin page with default modules</div></div>
 
 <p>The dashboard provides a summary of useful information for your site. The top section contains a couple of sentences telling you how long your site has been
@@ -54,8 +52,7 @@ comments you have awaiting moderation.
 <p>To manage your content -- draft or published, entry or page -- select one of the Manage links from the main menu.  Habari creates a main Manage menu item,
 which has a submenu listing each type of content in your system, providing a convenient way to access a specific type of content.  The destination for each of these menu links is, in fact, the same page: the menus merely provide a shortcut to filter the display by the specified content type.
 </p>
-<img alt="Manage Posts page" src="manage_posts.jpg" width="300" height="299"
-class="thumbimage" />
+<a href="manage_posts.jpg"><img alt="Manage Posts page" src="manage_posts.jpg" width="300" height="299" class="thumbimage" /></a>
 <p>Habari strives to make it as easy as possible to find and manage your content.  The first thing to note when visiting the "Manage Content" page is the <b>timeline</b>.
 </p>
 
@@ -89,8 +86,7 @@ class="thumbimage" />
 
 <p>As with posts, the first thing to note when visiting the Comments page is the timeline and the loupe at the top of the page. The timeline works with comments the same way as it does with posts.
 </p>
-<img alt="The Manage Comments page" src="manage_comments.jpg" width="300"
-height="416" class="thumbimage" />
+<a href="manage_comments.jpg"><img alt="The Manage Comments page" src="manage_comments.jpg" width="300" height="416" class="thumbimage" /></a>
 <p>Beneath the timeline are the comments returned by the current filters.  Above the timeline are the search and filter controls, and additional navigation
 controls.  By default, 20 comments will be presented beneath the timeline in reverse chronological order (newest first).  If you have more than 20 items that
 satisfy the filters, you can page forward and backward to see the next or previous set of comments using the "Older" and "Newer" links at the top left and
@@ -124,8 +120,7 @@ the <b>Approved</b> link, and then type in <i>terrific</i>.  Or, manually type i
 <p>To manage your site's tags, select <b>Tags</b> from the main menu, or type <b>Q</b>, then <b>A</b>.
 </p>
 
-<img alt="The Manage Tags page" src="manage_tags.jpg" width="300" height="103"
-class="thumbimage" />
+<a href="manage_tags.jpg"><img alt="The Manage Tags page" src="manage_tags.jpg" width="300" height="103" class="thumbimage" /></a>
 <p>At the very top of the tags page is a <b>search box</b>. After your site has been in use for a period of time, you can have quite a few tags. Use the search
 box to narrow the number of tags which you are viewing.
 </p>
@@ -146,8 +141,7 @@ box to narrow the number of tags which you are viewing.
 </p>
 
 <a name="Options"></a><h4>Options</h4>
-<img alt="Options admin page" src="options.jpg" width="300" height="231"
-class="thumbimage" />
+<a href="options.jpg"><img alt="Options admin page" src="options.jpg" width="300" height="231" class="thumbimage" /></a>
 
 <p>Options for your site include such things as the site title, tagline, number of posts per page, time zone, etc.
 </p>
@@ -160,8 +154,7 @@ class="thumbimage" />
 
 <a name="Themes_2"></a><h4>Themes</h4>
 
-<img alt="Themes admin page" src="manage_themes.jpg" width="300" height="259"
-class="thumbimage" />
+<a href="manage_themes.jpg"><img alt="Themes admin page" src="manage_themes.jpg" width="300" height="259" class="thumbimage" /></a>
 <p>To change your theme select <b>Themes</b> from the main menu, or type <b>Q</b>, then <b>T</b>. This will take you to the Themes page. </p><p>The Themes page is divided into two sections. The top section contains one item, the current active theme. The bottom section contains all the themes that are available for you to use.
 </p>
 
@@ -192,8 +185,7 @@ You can add blocks to your theme by selecting the appropriate <strong>New Block 
 </p>
 
 <a name="Plugins_2"></a><h4>Plugins</h4>
-<img alt="Plugins admin page" src="manage_plugins.jpg" width="300" height="281"
-class="thumbimage" />
+<a href="manage_plugins.jpg"><img alt="Plugins admin page" src="manage_plugins.jpg" width="300" height="281" class="thumbimage" /></a>
 <p>To manage your plugins, select <b>Plugins</b> from the main menu, or type <b>Q</b>, then <b>P</b>. You will be taken to your Plugins page.
 </p>
 
@@ -260,9 +252,7 @@ powers (over the blog, that is) while some users can be restricted to simply wri
 
 <p>Beneath the user listing is a list of all of the defined permissions within the system, with controls to enable or disable access to these permissions for the group.
 </p>
-<img alt="Group admin page showing permissions granted to &#39;admins&#39;
-group." src="group.jpg" width="300" height="414" class="thumbimage"
-/>
+<a href="group.jpg"><img alt="Group admin page showing permissions granted to &#39;admins&#39;group." src="group.jpg" width="300" height="414" class="thumbimage" /></a>
 
 <a name="Permissions"></a><h5>Permissions</h5>
 <p>There are two kinds of permissions within Habari: binary and CRUD:
