--- a/manual/terms.html
+++ b/manual/terms.html
@@ -73,7 +73,7 @@ href="help.html">Getting Help</a>
 <p>By design, Habari by itself has a basic set of capabilities. Plugins add functionality, new capabilities, or additional content types to Habari. Habari includes several out of the box&hellip;
 </p>
 <a name="Timeline_and_Loupe"></a><h4>Timeline and Loupe</h4>
-<img alt="The timeline and loupe" src="timeline.jpg" width="300" height="43" class="thumbimage" />
+<a href="timeline.jpg"><img alt="The timeline and loupe" src="timeline.jpg" width="300" height="43" class="thumbimage" /></a>
 <p>On certain administration pages, the loupe is a sliding, expandable window that operates on the timeline of a group of data. The default position for the loupe is the far right: the most recent items of the collection. The default width of the loupe encompasses 20 items. You can click inside the loupe and drag it left and right across the timeline: this will change the items shown beneath the loupe based on the date range highlighted by the loupe. On the left and right of the loupe are handlebars, which you can click to drag left or right to expand or shrink the size of the loupe: this will increase or decrease the number of items shown below.
 </p><p>The loupe makes it extremely easy to display and select specific timelines of data. You can drag and expand the loupe to display all the items from June of last year to June of this year. Or you can narrow the loupe to only display items from last month, or yesterday.
 </p>
