--- a/manual/using.html
+++ b/manual/using.html
@@ -54,7 +54,7 @@ Ideas</a> | <a href="administration.html">Administration</a> | <a href="help.htm
 <p>You can create your first post by clicking on the main menu, then selecting "Create Entry".
 </p><p>You are now looking at the publish entry page, by default you have three fields into which to enter information.
 </p>
-<img alt="Create Entry admin page" src="create_entry.jpg" width="300" height="267" class="thumbimage" />
+<a href="create_entry.jpg"><img alt="Create Entry admin page" src="create_entry.jpg" width="300" height="267" class="thumbimage" /></a>
 
 <ul><li>The Title box is the name of your entry, this can contain a single word, a sentence, numbers, or symbols producable by your keyboard.  By default, the title you supply will be used to create the URL by which this post will be accessed.
 </li></ul>
