--- a/manual/upgrading.html
+++ b/manual/upgrading.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml'/>
 <title> Habari - User Manual </title>
 <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
