Get rid of trac references.

--- a/manual/administration.html
+++ b/manual/administration.html
@@ -374,12 +374,11 @@ corresponding Importer plugin on the plugins page (Q P in the Main Menu) and the
 </p>
 
 <a name="Themes_3"></a><h4>Themes</h4>
-<p>Your site's theme is its basic look and feel as seen by your visitors. Habari comes with several themes.
+<p>Your site's theme is its basic look and feel as seen by your visitors. Habari includes two themes.
 </p>
 
 <ul><li> Charcoal - A unique theme designed to highlight some of Habari's capabilities.</li>
 <li> Mzingi - A basic theme designed to serve as a foundation from which you can create your own themes.</li>
-<li> K2 - One of the most popular themes in the blogging world.</li>
 </ul>
 
 <p>You aren't limited to these themes in your choices. There are many more themes listed in Habari's theme repository at <a href="http://wiki.habariproject.org/en/Available_Themes" class="external free" title="http://wiki.habariproject.org/en/Available_Themes" rel="nofollow">Habari's wiki</a>, and in the <a href="http://www.habariproject.org/dist/themes/" class="external free" title="http://www.habariproject.org/dist/themes/">Habari Distribution Directory</a>.
@@ -390,7 +389,10 @@ corresponding Importer plugin on the plugins page (Q P in the Main Menu) and the
 </p>
 
 <a name="Miscellaneous_Plugins"></a><h5>Miscellaneous Plugins</h5>
-<ul><li> Core Dash Modules - These included a latest posts module, a latest comments module, and a log module. Activate this plugin to get an overview of the latest activity on your site whenever you log in.</li>
+<ul>
+<li> AutoParagraph - Activate this to automatically insert HTML paragraph tags and line breaks in your site's content.</li>
+<li> Core Blocks - Fill areas with common blocks for archive links, tag clouds, HTML and more.</li>
+<li> Core Dash Modules - These include a latest posts module, a latest comments module, and a log module. Activate this plugin to get an overview of the latest activity on your site whenever you log in.</li>
 <li> Pingback - Enable this plugin to send pingbacks to sites to which you link in your posts.</li>
 <li> Spamchecker - Activate this plugin to perform a basic spam check on comments that your site receives.</li>
 <li> Undelete - We all make mistakes, including deleting posts that we later wish we had kept. Activate this plugin to retain deleted posts, so if you change your mind or discover you made a mistake after deleting something, you can recover it.</li>
