--- a/manual/help.html
+++ b/manual/help.html
@@ -41,10 +41,10 @@ Ideas</a> | <a href="administration.html">Administration</a> | <strong>Getting H
 <a name="Reporting_Bugs_.2F_Suggesting_Improvements"></a><h4>Reporting Bugs / Suggesting Improvements</h4>
 <p>Habari succeeds because people like you help improve it every day.  One of the easiest ways to contribute to the success of Habari is to report problems.  The <a href="http://groups.google.com/group/habari-users" class="external text" title="http://groups.google.com/group/habari-users" rel="nofollow">habari-users</a> mailing list is the first place that problems should be reported: if the issue is known, you'll be provided with confirmation of that fact and hopefully some information to help you work around the problem until it is fixed.  If you identify a new problem, you may be asked to file a bug report.  It's easy to do!</p>
 
-<p><a href="http://trac.habariproject.org/" class="external text" title="http://trac.habariproject.org/" rel="nofollow">Habari Trac</a> is the place to file bug reports.  Before you can file bugs, you need to register an account with the system.  Click the <tt>Register</tt> link at the far right of the screen.  Once you've created an account you can log in by clicking on the <tt>Login</tt> link.  Once logged in, you can file a new ticket!
+<p><a href="http://github.com/habari/habari/issues/" class="external text" title="Habari Issue Tracker on Github" rel="nofollow">Habari Issues on Github</a> is the place to file bug reports.  Before you can file bugs, you need to register an account with the system. Once logged in, you can file a new issue!
 </p>
 
-<img alt="Creating a New Ticket" src="create_new_ticket.jpg" width="300" height="242" class="thumbimage" />
+<img alt="Creating a New Issue" src="create_new_issue.jpg" width="300" height="242" class="thumbimage" />
 <p>The first thing you need to provide is a succinct summary of the problem.  Be concise, but don't be vague: the summary you provide is the first thing people will read when reviewing bugs to be fixed, so make sure that the developers get a jumpstart on your problem by supplying them with a meaningful summary.  If you see an HTTP 500 error page every time you try to log in, a good summary might be</p>
 
 <pre>
@@ -61,28 +61,16 @@ Can't log in!
 
 <p>Summaries are important!  Please try hard to provide a meaningful summary.</p>
 
-<p>Next you indicate whether your ticket is due to a defect with Habari, or if you're simply making a suggestion for enhancement.  The Habari developers love to see suggestions for enhancements because they help steer the long-term growth of Habari.</p>
+<p>Use labels to indicate whether your issue is due to a defect with Habari, or if you're simply making a suggestion for enhancement.  The Habari developers love to see suggestions for enhancements because they help steer the long-term growth of Habari.</p>
 
-<p>Below this you enter a full description of the problem or suggestion.  Be as verbose as possible.  If you have a specific error message, paste it here.  If you have log data, paste it here.  If you can reproduce the problem in one or more ways, describe in detail each of the ways to do so.  The more information you can provide, the greater the chance of a developer fixing the problem!  You can also upload screenshots if that helps to describe the problem: click the checkbox labeled "I have files to attach to this ticket".  This will allow you to upload files that will be attached to your report. The version of Habari you are using, the browser and its version, and the database backend ( MySQL, SQLite, Postgres, etc. ) are also very helpful in diagnosing and fixing issues that you report.</p>
+<p>Below this you enter a full description of the problem or suggestion.  Be as verbose as possible.  If you have a specific error message, paste it here.  If you have log data, paste it here.  If you can reproduce the problem in one or more ways, describe in detail each of the ways to do so.  The more information you can provide, the greater the chance of a developer fixing the problem! The version of Habari you are using, the browser and its version, and the database backend ( MySQL, SQLite, Postgres, etc. ) are also very helpful in diagnosing and fixing issues that you report.</p>
 
-<p>In the section labeled <tt>Ticket Properties</tt> you can fine-tune some details about your ticket.  If you're not sure what any of these mean, leave them all at the default values.</p>
+<p>When you're all done, click "Submit new issue".  This will add your issue to the system, and a Habari developer will eventually review it.  You might want to bookmark your issue, and come back to check on it periodically: the Habari developers might ask you questions in comments to your issue, seeking additional information or asking you to try a proposed fix to confirm that it works for you.</p>
 
-<ul>
-<li> Priority is how severe the problem is: most items can be left at "major", though issues involving data loss or security considerations can certainly be escalated to "critical" or "blocker".</li>
-<li> Most of the issues you open will likely be about the Habari software itself, but we also like to be alerted to bugs in our documentation and our website!  Suggestions for improvement for the documentation and website are also warmly encouraged.</li>
-<li> Keywords are tags you can assign to your ticket.  If you report a problem logging in, you might supply the keyword "login", for example.</li>
-<li> Ignore the CC field for now.</li>
-<li> It's usually best to leave the Milestone drop-down to "unassigned", and allow a Habari developer to set this as they estimate when the problem will be fixed.</li>
-<li> Select the version of Habari that you're using from the Version drop-down.</li>
-<li> Leave the "Assign to" field blank.</li>
-</ul>
-
-<p>When you're all done, click "Submit ticket".  This will add your ticket to the system, and a Habari developer will eventually review it.  You might want to bookmark your ticket, and come back to check on it periodically: the Habari developers might ask you questions in comments to your ticket, seeking additional information or asking you to try a proposed fix to confirm that it works for you.</p>
-
-<p>Please keep in mind when filing tickets for bug reports or feature enhancements that the list of tickets is completely public.  <b>DO NOT</b> post any passwords or other sensitive information.</p>
+<p>Please keep in mind when filing issues for bug reports or feature enhancements that the list of issues is completely public.  <b>DO NOT</b> post any passwords or other sensitive information.</p>
 
 <a name="A_note_about_security_issues"></a><h5>A note about security issues</h5>
-<p>As mentioned above, all items filed in the Habari Trac are public.  If you are reporting a security problem, or a potential security problem, we respectfully ask that you first contact security@habariproject.org so that we can review the situation with you without jeopardizing our users' sites.  If you open a ticket with details of how to execute an attack against a Habari installation, someone somewhere <b>will</b> see that information and exploit it.</p>
+<p>As mentioned above, all items filed on Github  are public.  If you are reporting a security problem, or a potential security problem, we respectfully ask that you first contact security@habariproject.org so that we can review the situation with you without jeopardizing our users' sites.  If you open an issue with details of how to execute an attack against a Habari installation, someone somewhere <b>will</b> see that information and exploit it.</p>
 
 </div>
 
